fix uploadDropZone sometime overflow

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -523,13 +523,15 @@ body.guest #timep:not(.show) ~ #problemp.hide ~ #rankp {
     padding: 10px;
     box-sizing: border-box;
     top: 0;
-    width: calc(100% - 40px);
-    height: calc(100% - 40px);
+    left: 0;
+    bottom: 0;
+    right: 0;
     border: 2px dotted #ccc;
     border-radius: 4px;
+    opacity: 1;
     z-index: 1;
     transition: all 0.4s ease;
-    opacity: 1;
+    transition-property: color, background-color, opacity;
 }
 
 #uploadp .fileupload-container #submitDropzone.drag {
